# WIM

./: .gitignore  EBAY_SETUP.md  FORCE_LOGOUT_SETUP.sql  README.md  WIM_Presentation_Reference.md  latest.json  latest.json.example  package-lock.json  package.json  wim-key-final.key.pub  wim-update-new.key.pub  wim-update-v2.key.pub  wim-update.key.pub
.github/workflows/: cloud-keepalive-backup.yml  release.yml
docs/: ebay-callback.html
docs/old-workflows/: README.md
src/: index.html  index_v221_backup.html  index_v223_backup.html  index_v224_backup.html  index_v230_backup.html  index_v232_backup.html  index_v233_backup.html  index_v234_backup.html  index_v235_backup.html  index_v240_backup.html  index_v248_backup.html  index_v250_backup.html  index_v2612_backup.html  index_v263_backup.html  index_v266_backup.html  index_v271_backup.html  index_v272_backup.html  index_v275_backup.html  index_v276_backup.html  index_v277_backup.html  index_v278_backup.html  index_v279_backup.html  index_v281_backup.html  index_v283_backup.html
src-tauri/: Cargo.toml  tauri.conf.json  tauri.conf_v238_backup.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs  main_v235_backup.rs
