[package]
name = "wim"
version = "3.3.88"
description = "Warehouse Inventory Management"
authors = ["WIM"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "multipart"] }
base64 = "0.22"
tokio = { version = "1", features = ["rt-multi-thread", "net", "time", "io-util", "macros"] }
open = "5"
rand = "0.8"
bcrypt = "0.15"
keyring = { version = "3", features = ["windows-native"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
